--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.9",
+    "next": "14.2.16",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
+    "react-scrollspy": "^3.4.3",
+    "react-typewriter": "^0.4.1",
+    "react-typewriter-effect": "^1.1.0"
   },
   "devDependencies": {
     "postcss": "^8",
