--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-scroll": "^1.9.0",
     "react-scrollspy": "^3.4.3",
+    "react-typed": "^2.0.12",
     "react-typewriter": "^0.4.1",
     "react-typewriter-effect": "^1.1.0"
   },
